tests/requests/invalid/002.py
from restkit.errors import InvalidRequestLine
request = InvalidRequestLine